# AoC24

./: .gitignore  Cargo.toml  justfile
aoc/: Cargo.toml
aoc/src/: main.rs
day01/: Cargo.toml
day01/src/: lib.rs
day02/: Cargo.toml
day02/assets/: puzzle.md
day02/src/: lib.rs
day03/: Cargo.toml
day03/assets/: puzzle.md
day03/src/: lib.rs
day04/: Cargo.toml
day04/src/: lib.rs
day05/: Cargo.toml
day05/src/: lib.rs
day06/: Cargo.toml
day06/src/: lib.rs
day07/: Cargo.toml
day07/src/: lib.rs
day_template/: Cargo.toml
day_template/src/: lib.rs
src/: lib.rs  main.rs
src/utils/: collections.rs  mod.rs  parser.rs
utils/: Cargo.toml
utils/src/: lib.rs
